# yz-pixel-ring

./: .gitignore  LICENSE  README.md  pyproject.toml  yz-pixel-ring.spec
.github/workflows/: release.yml
docs/: respeaker-usb-mic-array.md
packaging/: run_daemon.py
tests/: test_animations.py
tools/: build_exe.py  make_icon.py  mock_jarvyz_ws.py  release.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  PixelRingPage.tsx  index.ts  theme.ts  types.ts  vite-env.d.ts
ui/src/components/: CalibrateControls.tsx  DisplayControls.tsx  ModeAnimationsPanel.tsx  RingPreview.tsx  SpecEditor.tsx  TuningPanel.tsx
ui/src/lib/: api.ts  color.ts  useRingStream.ts
yz_pixel_ring/: __init__.py  __main__.py  animations.py  daemon.py  led.py  tuning.py
